<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_11"
    tools:context=".MoreActivity">

    <FrameLayout
        android:id="@+id/toolbar_more_page"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/item_padding_inside_4"
            android:layout_marginStart="@dimen/card_view_conner_8"
            android:layout_gravity="center_vertical"
            android:text="@string/item_right_btn"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/park_more_info"
            android:textSize="@dimen/toolbar_title_text_size_20"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_gravity="center"/>
    </FrameLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_more_info"
        android:layout_width="match_parent"
        android:layout_height="148dp"
        android:layout_marginStart="@dimen/card_view_margin_outside"
        android:layout_marginTop="@dimen/card_view_margin_top"
        android:layout_marginEnd="@dimen/card_view_margin_outside"
        app:cardCornerRadius="@dimen/card_view_conner_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_more_page">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height_48">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:layout_marginStart="@dimen/item_margin_outside"
                    android:text="@string/park_more_info_user_center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginEnd="@dimen/item_margin_outside"
                    android:hint="@string/common_nothing_hint" />
            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_line_height_2"
                android:background="@color/black_11" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height_48">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:layout_marginStart="@dimen/item_margin_outside"
                    android:text="@string/park_more_info_mac" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginEnd="@dimen/item_margin_outside"
                    android:hint="@string/common_nothing_hint" />
            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_line_height_2"
                android:background="@color/black_11" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height_48">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:layout_marginStart="@dimen/item_margin_outside"
                    android:text="@string/park_more_info_blue_tooth_uuid" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginEnd="@dimen/item_margin_outside"
                    android:hint="@string/common_nothing_hint" />
            </FrameLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>