<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_11"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/toolbar_main_page"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="@dimen/toolbar_title_text_size_20"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_gravity="center"/>
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_main_page">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/item_padding_inside_4">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_device_connect"
                android:layout_width="match_parent"
                android:layout_height="148dp"
                android:layout_marginStart="@dimen/card_view_margin_outside"
                android:layout_marginTop="@dimen/card_view_margin_top"
                android:layout_marginEnd="@dimen/card_view_margin_outside"
                app:cardCornerRadius="@dimen/card_view_conner_8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/item_height_48">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start|center_vertical"
                            android:layout_marginStart="@dimen/item_margin_outside"
                            android:text="@string/device_mac" />

                        <TextView
                            android:id="@+id/result_device_sn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end|center_vertical"
                            android:layout_marginEnd="@dimen/item_margin_outside"
                            android:hint="@string/device_mac_hint" />
                    </FrameLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/item_line_height_2"
                        android:background="@color/black_11" />

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/item_height_48">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start|center_vertical"
                            android:layout_marginStart="@dimen/item_margin_outside"
                            android:text="@string/device_connect_state" />

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end|center_vertical"
                            android:layout_marginEnd="@dimen/item_margin_outside">

                            <TextView
                                android:id="@+id/device_state_hint"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:hint="@string/device_connect_state_hint"
                                android:padding="@dimen/item_padding_inside_4" />

                            <TextView
                                android:id="@+id/btn_stop_connect"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:background="@drawable/btn_disconnect_border"
                                android:padding="@dimen/item_padding_inside_4"
                                android:text="@string/device_stop_connect"
                                android:textColor="@color/blue"
                                android:visibility="gone"/>

                            <TextView
                                android:id="@+id/result_device_connect_state"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="@dimen/item_margin_outside"
                                android:layout_toStartOf="@id/btn_stop_connect"
                                android:padding="@dimen/item_padding_inside_4"
                                android:text="@string/device_disconnect"
                                android:visibility="gone"/>
                        </RelativeLayout>

                    </FrameLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/item_line_height_2"
                        android:background="@color/black_11" />

                    <TextView
                        android:id="@+id/btn_scan_qr_code"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/item_height_48"
                        android:gravity="center"
                        android:text="@string/device_scan_qr_code"
                        android:textColor="@color/blue"
                        android:textSize="@dimen/item_text_size_18"
                        android:textStyle="bold"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_car_info"
                android:layout_width="match_parent"
                android:layout_height="194dp"
                android:layout_marginStart="@dimen/card_view_margin_outside"
                android:layout_marginTop="@dimen/card_view_margin_top"
                android:layout_marginEnd="@dimen/card_view_margin_outside"
                app:cardCornerRadius="@dimen/card_view_conner_8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_device_connect">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/item_height_48">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start|center_vertical"
                            android:layout_marginStart="@dimen/item_margin_outside"
                            android:text="@string/park_license" />

                        <TextView
                            android:id="@+id/result_park_license"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end|center_vertical"
                            android:layout_marginEnd="@dimen/item_margin_outside"
                            android:hint="@string/common_nothing_hint" />
                    </FrameLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/item_line_height_2"
                        android:background="@color/black_11" />

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/item_height_48">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start|center_vertical"
                            android:layout_marginStart="@dimen/item_margin_outside"
                            android:text="@string/park_time" />

                        <TextView
                            android:id="@+id/result_park_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end|center_vertical"
                            android:layout_marginEnd="@dimen/item_margin_outside"
                            android:hint="@string/common_nothing_hint" />
                    </FrameLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/item_line_height_2"
                        android:background="@color/black_11" />

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/item_height_48">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start|center_vertical"
                            android:layout_marginStart="@dimen/item_margin_outside"
                            android:text="@string/park_money" />

                        <TextView
                            android:id="@+id/result_park_money"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end|center_vertical"
                            android:layout_marginEnd="@dimen/item_margin_outside"
                            android:hint="@string/common_nothing_hint" />
                    </FrameLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/item_line_height_2"
                        android:background="@color/black_11" />

                    <FrameLayout
                        android:visibility="gone"
                        android:id="@+id/btn_park_more_info"
                        android:clickable="false"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/item_height_48">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start|center_vertical"
                            android:layout_marginStart="@dimen/item_margin_outside"
                            android:text="@string/park_more_info" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end|center_vertical"
                            android:layout_marginEnd="@dimen/item_margin_outside"
                            android:padding="@dimen/item_padding_inside_4"
                            android:text="@string/item_left_btn" />
                    </FrameLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/item_line_height_2"
                        android:background="@color/black_11" />

                    <TextView
                        android:id="@+id/btn_get_park_info"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/item_height_48"
                        android:gravity="center"
                        android:text="@string/park_get_info"
                        android:textColor="@color/blue_11"
                        android:textSize="@dimen/item_text_size_18"
                        android:textStyle="bold"
                        android:clickable="false"
                        android:foreground="?android:attr/selectableItemBackground" />
                </LinearLayout>

                <View
                    android:id="@+id/mask_get_info"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/black_11"
                    android:visibility="visible" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_gate_open"
                android:layout_width="match_parent"
                android:layout_height="98dp"
                android:layout_marginStart="@dimen/card_view_margin_outside"
                android:layout_marginTop="@dimen/card_view_margin_top"
                android:layout_marginEnd="@dimen/card_view_margin_outside"
                app:cardCornerRadius="@dimen/card_view_conner_8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_car_info">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/item_height_48">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start|center_vertical"
                            android:layout_marginStart="@dimen/item_margin_outside"
                            android:text="@string/gate_state" />

                        <TextView
                            android:id="@+id/result_gate_open"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end|center_vertical"
                            android:layout_marginEnd="@dimen/item_margin_outside"
                            android:hint="@string/common_nothing_hint" />
                    </FrameLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/item_line_height_2"
                        android:background="@color/black_11" />

                    <TextView
                        android:id="@+id/btn_gate_open"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/item_height_48"
                        android:gravity="center"
                        android:text="@string/gate_open"
                        android:textColor="@color/blue_11"
                        android:textSize="@dimen/item_text_size_18"
                        android:textStyle="bold"
                        android:clickable="false"
                        android:foreground="?android:attr/selectableItemBackground" />
                </LinearLayout>

                <View
                    android:id="@+id/mask_gate_open"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/black_11"
                    android:visibility="visible" />
            </androidx.cardview.widget.CardView>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="@dimen/card_view_margin_top"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_gate_open">
                <TextView
                    android:id="@+id/test_show_msg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </ScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/scanning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:background="@color/white"
        android:padding="@dimen/item_height_48"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/scanning_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="16dp"
            android:text="@string/active_scan_message"
            android:textSize="18sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>